fix overflow #2

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -62,6 +62,7 @@ input, textarea {
   background: url("../app/background.png");
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .padding-container {
